[gd_scene load_steps=4 format=2]

[ext_resource path="res://reuse2d/touchscreen dpad.gd" type="Script" id=1]

[sub_resource type="NoiseTexture" id=1]
width = 50
height = 50

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 25 )

[node name="touchscreen dpad" type="Node2D"]
script = ExtResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -25, -50 )
normal = SubResource( 1 )
shape = SubResource( 2 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( -25, 50 )
normal = SubResource( 1 )
shape = SubResource( 2 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( -75, 0 )
normal = SubResource( 1 )
shape = SubResource( 2 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="."]
position = Vector2( 25, 0 )
normal = SubResource( 1 )
shape = SubResource( 2 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="released" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
[connection signal="pressed" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_pressed"]
[connection signal="released" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_released"]
[connection signal="pressed" from="TouchScreenButton4" to="." method="_on_TouchScreenButton4_pressed"]
[connection signal="released" from="TouchScreenButton4" to="." method="_on_TouchScreenButton4_released"]
